- fixed potential ressource leaks in SCIPsolveLinearProb, expr.c, sepa_eccuts, cons_cumulative.c, cons_nonlinear.c
- fixed bug in cons_orbitope.c, where wrong terminating index in separation of SCIs was used
- fixed order of SCIPcalcCliquePartition in corner case where no cliques are available

misc:
- dropped support for MOSEK < 7.0.0.0

SCIP version 4.0.1
==================

interface:
- add function SCIPsetSlackVarUb() to control upper bound of slack variable in cons_indicator
- SCIPheurPassIndicator has a new parameter which allows to pass the objective of the solution

parameters:
- new paramter "constraints/indicator/maxsepanonviolated" to stop separation after separation of non violated cuts

features
- added parsing functionality to cardinality constraint handler for CIP format
- added command line option '-o' and command 'validatesolve' in interactive shell
  to validate the solution against an external primal and dual reference value.
- allow to relax objective limit in reoptimization in presolved stage
- suppress excessive printing about numerical troubles in LP on default verblevel (high)
- updated Mosek interface to compile with Mosek 8.1, too
- updates GAMS interface to latest version
- new LP interface to Glop (Google OR tools); CMake only


fixed bugs:
- fixed bug in shift and propagate--variable information with a negation transformation is correctly reset after backtracking
- fixed bug in genvbounds propagator when applying a restart after the root node
- fixed unintended behavior of interrupt signal handler inside SCIP copies
- fixed uninitialized values in SCIP's digraph data structure after calling SCIPdigraphResize()
- fixed memory leak in OSiL reader when using SOS constraints
- fixed issue related to SCIPcreateFiniteSolCopy not being able to remove all infinite fixings
- fixed issue in SCIPcopyLimits() w.r.t. soft time limit
- improved handling of infinite values in a primal solution in quadratic and nonlinear constraints